# l2i_fusion_detectction

./: CMakeLists.txt  README.md  package.xml  readme-lidar-camera-fusion.md
config/: setup_config.yaml
launch/: detection_and_localization_system.launch.py  detection_and_localization_yolo_system.launch.py  lidar_camera_detection.launch.py  lidar_camera_fusion.launch.py  lidar_camera_fusion_yolo.launch.py  lidar_camera_fusion_yolo_test.launch.py  lidar_fusion_detection.launch.py  lidar_fusion_detection_real.launch.py
models/gimbal_small_3d/: model.sdf
models/lidar/: model.sdf
models/x500_camera_lidar/: 4022_gz_x500_camera_lidar  model.config  model.sdf
src/: New.cpp  good.cpp  lidar_camera_fusion_with_detection copy.cpp  lidar_camera_fusion_with_detection.cpp  lidar_camera_fusion_with_detection_test.cpp  test.cpp  update_test.cpp
worlds/: default.sdf
