<?xml version="1.0"?>
<package format="3">
  <name>ros2_lidar_camera_fusion_with_detection_cpp</name>
  <version>1.0.0</version>
  <description>A ROS2 package for lidar and camera fusion with detection, using C++.</description>

  <maintainer email="agm.musalami@gmail.com">AbdullahGM1</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>opencv2</depend>
  <depend>yolov8_msgs</depend>
  <depend>geometry_msgs</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
